# worchestic

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: release.yml  unittest.yml
tests/: test_group.py  test_matrix.py  test_signal.py  utils.py
worchestic/: atomics.py  group.py  matrix.py  signals.py  vid_matrix.py
