[project]
name = "worchestic"
description = "A generic controller for a switch fabric"
version = "0.2.4"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
  {name = "Roger Gammans", email = "rgammans@gammascience.co.uk"},
]
keywords = ['routing', 'switch', 'kvm', 'hardware' ]

classifiers = [
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Other/Nonlisted Topic"
]
dependencies = [
    "atomicx"
]

[build-system]
requires = ["setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
    [tox]

    envlist = py38,py39,py310,py311

    [testenv]
    commands = 
        python -m unittest discover -s tests

    [gh-actions]
    python =
        3.8: py38
        3.9: py39
        3.10: py310
        3.11: py311
"""
